--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-github: dscalzi
-patreon: dscalzi
-custom: ['https://www.paypal.me/dscalzi']
+github: Cleboost
+custom: ['https://www.paypal.me/cleboost']
