--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Modded Minecraft Launcher",
   "author": "Cleboost",
   "license": "UNLICENSED",
-  "homepage": "https://herbronelauncher.cleboost.ovh",
+  "homepage": "https://herbrinelauncher.cleboost.ovh",
   "bugs": {
     "url": ""
   },
